@@ -96,11 +96,13 @@ parameters: If final scores are within standard dev/10, pick randomly
 --- 19 jan full ---
 No special treatment for history reset for obj only change
 --- 19 jan private only full ---
+Max restarts as parameter 0,1
+--- 22 jan full ---
 
 
 TODOs
 
 go back to faster tuning?
-Max restarts as parameter 0,1
+
 
 
